--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-    <script rel="stylesheet" src="style.css"> </script>    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="style.css"></link>   
     <title>Document</title>
 </head>
 
@@ -30,33 +29,73 @@
           </ul>
         </div>
       </nav>
-      <div class="container">
-          <div class="columns-centered">
+      <div class= "jumbotron jumbotron-fluid">
+        <div class="container d-flex justify-content-center">
+
+          <div class="columns">
             <div class="column">
-                <h1 class="font" >My name is Maria Jose a Full-Stack Developer </h1> 
-                <h3>I am here to help you create the website you have dreamed of</h3>
+                <h1 class="font" > Welcome to my page </h1> 
+
+                <h3> I am a Full-Stack Developer</h3>
+                <img class="fullstack" src="assets/fullstack.jpg" style="height: 300px; width: auto fit-content"></img>
+              </div>
             </div>
-            <img src="assets/mypicture.jpg" alt="Mypicture" style="height: 200px; width: auto; ></img>
           </div>
-<!-- Footer -->
-<!-- Footer -->
-<footer class="page-footer font-small unique-color-dark pt-4">
+          
+        </div>
+        <section class="container d-flex justify-content-center">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img" src="assets/mypicture.jpg" alt="Mypicture" style="height: 230px; width: 100%" alt="Card image cap"></img>
+            <div class="card-body">
+              <p class="card-text"> Hi! My name is Maria Jose. I am a Full-Stack Developer. I am here to help you create your dream website.</p>
+            </div>
+          </div>
+        </section>
+        <section class="container">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="..." alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </section>
+          <footer class="page-footer font-small unique-color-dark pt-4">
 
     <!-- Footer Elements -->
     <div class="container">
   
       <!-- Call to action -->
-      <div class="container-fluid text-center text-md-left">
+      <div class="container d-flex justify-content-center">
 
     <!-- Grid row -->
-    <div class="row">
+        <div class="row">
 
       <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3">
+        <div class="col-md-6 mt-md-0 mt-3">
 
         <!-- Links -->
         <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+        <hr class="deep-purple accent-2 mb-2 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
           <i class="fas fa-home mr-3"></i> Georgia, US</p>
         <p>
@@ -64,11 +103,11 @@
         <p>
           <i class="fas fa-phone mr-3"></i> + 01 678 283 7616</p>
        </div>   
-      <div class="col-md-6 mb-md-0 mb-3">
+        <div class="col-md-6 mb-md-0 mb-3">
             <a href="https://github.com/mariariofrio" target="blank">My Github</a><img
             src="assets/github.png" style="height: 50px; width: auto; border:none">
           <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="maria-jose-riofrio-b97780148"><a class="LI-simple-link" href='https://www.linkedin.com/in/maria-jose-riofrio-b97780148?trk=profile-badge'>Maria Jose Riofrio</a></div>
-      </div>
+       </div>
           </li>
         </ul>
       </div>
