--- a/contactinfo.html
+++ b/contactinfo.html
@@ -27,13 +27,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#aboutme">About Me <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#portfolio">Portfolio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
         </li>
          <li class="nav-item active">
-          <a class="nav-link" href="#contact">Contact Info <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Contact Info <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
@@ -57,7 +57,7 @@
       <img class="card-img" src="assets/mypicture.jpg" alt="Mypicture" style="height: 230px; width: 100%"
         alt="Card image cap"></img>
       <div class="card-body">
-        <h2 id="aboutme">About Me</h2>
+        <h2>About Me</h2>
         <p class="card-text"> Hi! My name is Maria Jose. I am a Full-Stack Developer. I am here to help you create your
           dream website.</p>
       </div>
@@ -65,7 +65,7 @@
   </section>
   <br>
   <div class="Portfolio d-flex justify-content-center">
-    <h2 id=portfolio>My Portfolio</h2>
+    <h2 class="mywork">My Portfolio</h2>
   </div>
   <section class="container">
     <div class= "column justify-content-md-start">
@@ -80,7 +80,7 @@
   <div class="row col-md-12 justify-content-md-center">
     <figure class="figure ">
       <figcaption class="figure-caption">Weather App</figcaption>
-      <a href="https://mariariofrio.github.io/weatherappp/">
+      <a href="file:///C:/Users/MJ/OneDrive/Documents/weatherapp/weatherapp/index.html">
         <img alt="Qries" src="assets/weatherapp.PNG" class="figure-img img-fluid rounded" style="height: 300px; width: 400px" alt="A generic square placeholder image with rounded corners in a figure."></img>
         </a>
     </figure>
@@ -96,66 +96,54 @@
   </section>
 <br>
 
-<section class="contact-section bg-black" id="footer">
-  <div class="container"">
+  <footer class="page-footer font-small unique-color-dark pt-4">
 
-    <div class="row">
+    <!-- Footer Elements -->
+    <div class="container ">
 
-      <div class="col-md-4 mb-3 mb-md-0">
-        <div class="card py-4 h-100">
-          <div class="card-body text-center">
-            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-            <h4 class="text-uppercase m-0" id="contact">Contact</h4>
-            <hr class="my-4">
-            <div class="small text-black-50">Woodstock, Georgia</div>
-            <div class="small text-black-50">678-283-7616</div>
+      <!-- Call to action -->
+      <div class="container d-flex justify-content-center">
+
+        <!-- Grid row -->
+        <div class="row">
+
+          <!-- Grid column -->
+          <div class="col-md-6 mt-md-0 mt-3">
+
+            <!-- Links -->
+            <h6 class="text-uppercase font-weight-bold">Contact</h6>
+            <hr class="deep-purple accent-2 mb-2 mt-0 d-inline-block mx-auto" style="width: 60px;">
+            <p>
+              <i class="fas fa-home mr-3"></i> Georgia, US</p>
+            <p>
+              <i class="fas fa-envelope mr-3"></i> maria.riofrio.mr@gmail.com</p>
+            <p>
+              <i class="fas fa-phone mr-3"></i> + 01 678 283 7616</p>
           </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 mb-3 mb-md-0">
-        <div class="card py-4 h-100">
-          <div class="card-body text-center">
-            <i class="fas fa-envelope text-primary mb-2"></i>
-            <h4 class="text-uppercase m-0">Email</h4>
-            <hr class="my-4">
-            <div class="small text-black-50">
-              <a href="#">maria.riofrio.mr@gmail.com</a>
+          <div class="col-md-6 mb-md-0 mb-3">
+            <a href="https://github.com/mariariofrio" target="blank">My Github</a><img src="assets/github.png"
+              style="height: 50px; width: auto; border:none">
+            <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+              data-type="horizontal" data-theme="dark" data-vanity="maria-jose-riofrio-b97780148"><a
+                class="LI-simple-link"
+                href='https://www.linkedin.com/in/maria-jose-riofrio-b97780148?trk=profile-badge'>Maria Jose Riofrio</a>
             </div>
           </div>
+          </li>
+          </ul>
         </div>
+        <!-- Call to action -->
+
       </div>
+      <!-- Footer Elements -->
 
-      <div class="col-md-4 mb-3 mb-md-0">
-        <div class="card py-4 h-100">
-          <div class="card-body text-center">
-            <i class="fas fa-mobile-alt text-primary mb-2"></i>
-            <h4 class="text-uppercase m-0">Resume</h4>
-            <hr class="my-4">
-            <a class="small text-black-50" href="https://docs.google.com/document/d/1OZ-gX6Os9Rnt8roIl1OzZNyJNyZsH5A7pja3Tgi9prk/edit?usp=sharing"> Resume </a>
-          </div>
-        </div>
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
       </div>
-    </div>
-<br>
-    <div class="social d-flex justify-content-center">
-  
-      <a href="https://www.linkedin.com/in/maria-jose-riofrio-b97780148/" class="mx-2"> <img src="assets/linkedinicon.jpg" style="height: 50px; width: auto; border:none">
-      </a>
-  </i>
-      <a href="https://github.com/mariariofrio" class="mx-2">
-          <img src="assets/github.png" style="height: 50px; width: auto; border:none"></a>
-    </div>
+      <!-- Copyright -->
 
-  </div>
-
-<!-- Footer -->
-<footer class="bg-black small text-center text-white-50">
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-  </div>
-</footer>
-</section>
+  </footer>
   <!-- Footer -->
 
 </body>
