--- a/contactinfo.html
+++ b/contactinfo.html
@@ -9,6 +9,8 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script> -->
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+      <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   </link>
   <link rel="stylesheet" href="style.css">
@@ -64,7 +66,47 @@
     </div>
   </section>
   <br>
-  <div class="Portfolio d-flex justify-content-center">
+  <section class="page-section portfolio" id="portfolio">
+    <div class="container">
+        <!-- Portfolio Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+        <br>
+        <!-- Portfolio Grid Items-->
+        <div class="row">
+            <!-- Portfolio Item 1-->
+            <div class="col-md-6 col-lg-4 mb-5">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white"></div>
+                    </div>
+                    <a href="https://itsjonkelley.github.io/RainChk/">
+                      <img alt="Qries" src="assets/RainChck.PNG" class="figure-img img-fluid rounded" style="height: 300px; width: 400px" alt="A generic square placeholder image with rounded corners in a figure."></img>
+                      </a>
+                </div>
+            </div>
+            <!-- Portfolio Item 2-->
+            <div class="col-md-6 col-lg-4 mb-5">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white"></div>
+                    </div>
+                    <a href="file:///C:/Users/MJ/OneDrive/Documents/weatherapp/weatherapp/index.html">
+                      <img alt="Qries" src="assets/weatherapp.PNG" class="figure-img img-fluid rounded" style="height: 300px; width: 400px" alt="A generic square placeholder image with rounded corners in a figure."></img>
+                      </a>
+                </div>
+            </div>
+            <!-- Portfolio Item 3-->
+            <div class="col-md-6 col-lg-4 mb-5">
+                <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white"></div>
+                    </div>
+                    <a href="https://mariariofrio.github.io/passwordap/">
+                      <img alt="Qries" src="assets/PasswordAPP.PNG" class="figure-img img-fluid rounded" style="height: 300px; width: 400px" alt="A generic square placeholder image with rounded corners in a figure."></img>
+                      </a>
+                </div>
+            </div>
+  <!-- <div class="Portfolio d-flex justify-content-center">
     <h2 class="mywork">My Portfolio</h2>
   </div>
   <section class="container">
@@ -93,7 +135,7 @@
         </a>
     </figure>
   </div>
-  </section>
+  </section> -->
 <br>
 
   <footer class="page-footer font-small unique-color-dark pt-4">
