--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white"></div>
             </div>
-            <a href="file:///C:/Users/MJ/OneDrive/Documents/weatherapp/weatherapp/index.html">
+            <a href="https://mariariofrio.github.io/weatherappp/">
               <img alt="Qries" src="assets/weatherapp.PNG" class="figure-img img-fluid rounded"
                 style="height: 300px; width: 400px"
                 alt="A generic square placeholder image with rounded corners in a figure."></img>
