--- a/index.html
+++ b/index.html
@@ -109,6 +109,30 @@
             </a>
           </div>
         </div>
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white"></div>
+            </div>
+            <a href="https://eatmoreburgers.herokuapp.com/">
+              <img alt="Qries" src="assets/burgerapp.JPG" class="figure-img img-fluid rounded"
+                style="height: 300px; width: 400px"
+                alt="A generic square placeholder image with rounded corners in a figure."></img>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white"></div>
+            </div>
+            <a href="https://fathomless-temple-07681.herokuapp.com/">
+              <img alt="Qries" src="assets/testapp.PNG" class="figure-img img-fluid rounded"
+                style="height: 300px; width: 400px"
+                alt="A generic square placeholder image with rounded corners in a figure."></img>
+            </a>
+          </div>
+        </div>
   </section>
   <br>
 
